[package]
name = "tiktok-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-multipart = "0.6.1"
actix-rt = "2.9.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
derive_more = "0.99.7"
dotenvy = "0.15"
flexi_logger = "0.27"
log = "0.4"
serde = { version = "1", features = ["derive"] }
md5 = "0.7"
uuid = { version = "0.8", features = ["v4"] }
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
serde_json = "1.0"
local-ip-address = "0.5.6"
chrono = { version = "0.4.31", features = ["serde"] }
serde_urlencoded = "0.7.1"
regex = "1.10.2"
unicode-segmentation = "1.10.1"
rusqlite = { version = "0.30.0", features = ["bundled"] }
magic-crypt = "3.1.13"
